--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,46 +1,20 @@
+
 <footer class="site-footer">
 
-  <div class="wrapper">
-
-    <h2 class="footer-heading">{{ site.title | escape }}</h2>
-
-    <div class="footer-col-wrapper">
-      <div class="footer-col footer-col-1">
-        <ul class="contact-list">
-          <li>
-            {% if site.author %}
-              {{ site.author | escape }}
-            {% else %}
-              {{ site.title | escape }}
-            {% endif %}
-            </li>
-            {% if site.email %}
-            <li><a href="mailto:{{ site.email }}">{{ site.email }}</a></li>
-            {% endif %}
-        </ul>
-      </div>
-
-      <div class="footer-col footer-col-2">
-        <ul class="social-media-list">
-          {% if site.github_username %}
-          <li>
-            {% include icon-github.html username=site.github_username %}
-          </li>
-          {% endif %}
-
-          {% if site.twitter_username %}
-          <li>
-            {% include icon-twitter.html username=site.twitter_username %}
-          </li>
-          {% endif %}
-        </ul>
-      </div>
-
-      <div class="footer-col footer-col-3">
-        <p>{{ site.description | escape }}</p>
-      </div>
+  <!-- <footer class="footer">
+    <div class="grid-x">
+      <div class="large-3 cell"><p>Copyright BostonHacks 2018</p></div>
+      <div class="large-3 cell"><p>Facebook: ...</p></div>
+      <div class="large-3 cell"><p>Twitter: ...</p></div>
+      <div class="large-3 cell"><p>Instagram: ...</p></div>
     </div>
+  </footer> -->
 
-  </div>
+  <!-- the footer is mostly commented out, I couldn't get it to display well -->
 
 </footer>
+
+<script src="/assets/js/vendor/jquery.js"></script>
+<script src="/assets/js/vendor/what-input.js"></script>
+<script src="/assets/js/vendor/foundation.min.js"></script>
+<script src="/assets/js/app.js"></script>
