--- a/_layouts/previous.html
+++ b/_layouts/previous.html
@@ -4,6 +4,8 @@ layout: default
 
 <h1> {{ page.title }} </h1>
 
+<p><i> This is going to be dedicated to past hackathons, but doesn't have anything yet.</i></p>
+
 <ul>
   {% for ph in page.pastHackathons %}
     <li> {{ ph }} </li>
