--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,8 +13,7 @@
   <!-- the footer is mostly commented out, I couldn't get it to display well -->
 
 </footer>
-
-<script src="/assets/js/vendor/jquery.js"></script>
-<script src="/assets/js/vendor/what-input.js"></script>
-<script src="/assets/js/vendor/foundation.min.js"></script>
-<script src="/assets/js/app.js"></script>
+<script src="{{ "/assets/js/vendor/jquery.js" | relative_url }}"></script>
+<script src="{{ "/assets/js/vendor/what-input.js" | relative_url }}"></script>
+<script src="{{ "/assets/js/vendor/foundation.min.js" | relative_url }}"></script>
+<script src="{{ "/assets/js/app.js" | relative_url }}"></script>
