--- a/_includes/header.html
+++ b/_includes/header.html
@@ -9,9 +9,9 @@
     <ul class="dropdown menu" data-dropdown-menu>
       <!-- <li class="menu-text"><a href="#">{{ site.title }}</a></li> -->
       <li class="menu-text">{{ site.title }}</li>
-      <li><a href="/">Home</a></li>
-      <li><a href="/previous">Previous Hackathons</a></li>
-      <li><a href="/about">About / Contact</a></li>
+      <li><a href="{{ "/" | relative_url }}">Home</a></li>
+      <li><a href="{{ "/previous" | relative_url }}">Previous Hackathons</a></li>
+      <li><a href="{{ "/about" | relative_url }}">About / Contact</a></li>
     </ul>
   </div>
 </div>
