added some shiz

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,6 +6,16 @@ layout: default
   <h1> {{ site.nextHackathon.name }} </h1>
   <div> {{ site.nextHackathon.date }} </div>
   <div> {{ site.nextHackathon.location }} </div>
+  <br />
+  <i>
+    <div> attend button </div>
+    <div> sponsor button </div>
+    <div> general landing page things </div>
+    <div> hackathon / event specific things </div>
+    <div> schedule </div>
+    <div> FAQ </div>
+    <div> sponsors, supporting partners </div>
+  </i>
 
   <hr />
 
@@ -18,4 +28,10 @@ layout: default
     <div class="medium-6 cell"> <a href="about.html" class="button">Submit</a> </div>
   </div>
 
+  <p>
+    Check us out on social media! (This will be a footer later) <br />
+    Facebook: <a href="https://www.facebook.com/bostonhacks/">BostonHacks</a> <br />
+    Twitter: <a href="https://twitter.com/boston_hacks">@boston_hacks</a> <br />
+    Instagram: <a href="https://www.instagram.com/bostonhacks/">bostonhacks</a>
+  </p>
 </div>
