--- a/_layouts/previous.html
+++ b/_layouts/previous.html
@@ -4,10 +4,14 @@ layout: default
 
 <h1> {{ page.title }} </h1>
 
-<p><i> This is going to be dedicated to past hackathons, but doesn't have anything yet.</i></p>
-
-<ul>
-  {% for ph in page.pastHackathons %}
-    <li> {{ ph }} </li>
-  {% endfor %}
-</ul>
+{% for ph in page.pastHackathons %}
+  <u><h2> {{ ph.name }} </h2></u>
+  <p> 
+    <i>{{ ph.date }}</i> <br />
+    Director: {{ ph.director }} <i>*** picture of director goes here ***</i> <br />
+    Organizers: {{ ph.organizers }} <i>**** picture of organizers goes here ***</i>
+  </p>
+  <p>*** Pictures of people have fun here ***</p>
+  <p>*** Sponsors here ***</p>
+  <p>*** Attendance statistics here ***</p>
+{% endfor %}
