translation to bootstrap, plus finished most of it

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,19 +1,24 @@
 
-<footer class="site-footer">
-
-  <!-- <footer class="footer">
-    <div class="grid-x">
-      <div class="large-3 cell"><p>Copyright BostonHacks 2018</p></div>
-      <div class="large-3 cell"><p>Facebook: ...</p></div>
-      <div class="large-3 cell"><p>Twitter: ...</p></div>
-      <div class="large-3 cell"><p>Instagram: ...</p></div>
-    </div>
-  </footer> -->
-
-  <!-- the footer is mostly commented out, I couldn't get it to display well -->
-
+<footer class="footer text-center">
+  <div class="container-fluid">
+      <span>
+        Check us out on Social Media! &nbsp;
+        <a href="https://www.facebook.com/bostonhacks/">
+          <img src="{{ "/assets/imgs/FB-f-Logo__blue_50.png" | relative_url }}" style="width:1em; height:1em;">
+        </a> &nbsp;
+        <a href="https://twitter.com/boston_hacks">
+          <img src="{{ "/assets/imgs/Twitter_Logo_WhiteOnBlue.png" | relative_url }}" style="width:1em; height:1em;">
+        </a> &nbsp;
+        <a href="https://www.instagram.com/bostonhacks/">
+          <img src="{{ "/assets/imgs/glyph-logo_May2016.png" | relative_url }}" style="width:1em; height:1em;">
+        </a>
+      </span>
+      <br />
+      <span>
+        Copyright &copy; 2018 BostonHacks. All rights reserved.
+      </span>
+  </div>
 </footer>
-<script src="{{ "/assets/js/vendor/jquery.js" | relative_url }}"></script>
-<script src="{{ "/assets/js/vendor/what-input.js" | relative_url }}"></script>
-<script src="{{ "/assets/js/vendor/foundation.min.js" | relative_url }}"></script>
-<script src="{{ "/assets/js/app.js" | relative_url }}"></script>
+
+<script src="{{ "/assets/js/jquery-3.3.1.min.js" | relative_url }}"></script>
+<script src="{{ "/assets/js/bootstrap.min.js" | relative_url }}"></script>
