--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,17 +1,29 @@
+<div class="container-fluid sticky-top">
 
-<div class="title-bar" data-responsive-toggle="example-menu" data-hide-for="medium">
-  <button class="menu-icon" type="button" data-toggle="example-menu"></button>
-  <div class="title-bar-title">Menu</div>
-</div>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <a class="navbar-brand" href="{{ "/" | relative_url }}">
+      <img src="{{ "/assets/imgs/terrierLogo.png" | relative_url }}" width="30" height="30">
+      <!-- <i>&lt;/bh&gt;</i> -->
+      {{ site.title }}
+    </a>
 
-<div class="top-bar" id="example-menu">
-  <div class="top-bar-left">
-    <ul class="dropdown menu" data-dropdown-menu>
-      <!-- <li class="menu-text"><a href="#">{{ site.title }}</a></li> -->
-      <li class="menu-text">{{ site.title }}</li>
-      <li><a href="{{ "/" | relative_url }}">Home</a></li>
-      <li><a href="{{ "/previous" | relative_url }}">Previous Hackathons</a></li>
-      <li><a href="{{ "/about" | relative_url }}">About / Contact</a></li>
-    </ul>
-  </div>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+
+    <div class="collapse navbar-collapse" id="navbarSupportedContent">
+      <ul class="navbar-nav mr-auto">
+        <li class="nav-item {% if page.permalink == "/" %} active {% endif %}">
+          <a class="nav-link" href="{{ "/" | relative_url }}">Home</a>
+        </li>
+        <li class="nav-item {% if page.permalink == "/previous/" %} active {% endif %}">
+          <a class="nav-link" href="{{ "/previous" | relative_url }}">Previous Hackathons</a>
+        </li>
+        <li class="nav-item {% if page.permalink == "/about/" %} active {% endif %}">
+          <a class="nav-link" href="{{ "/about" | relative_url }}">About / Contact</a>
+        </li>
+      </ul>
+    </div>
+  </nav>
+
 </div>
