--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1,6 +1,12 @@
+
+body {
+  margin-bottom: 4em; /* Margin bottom by footer height */
+}
+
 .footer {
-  /*position: fixed; 
-  bottom: 0;*/ 
-  z-index: 100000;
-  background-color: #EEEEEE;
+  position: fixed;
+  bottom: 0;
+  width: 100%;
+  padding: 0.5em;
+  background-color: #f5f5f5;
 }
