--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,29 +1,66 @@
-<div class="container-fluid sticky-top">
+<!--<div class="container-fluid sticky-top">-->
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="{{ "/" | relative_url }}">
-      <img src="{{ "/assets/imgs/terrierLogo.png" | relative_url }}" width="30" height="30">
-      <!-- <i>&lt;/bh&gt;</i> -->
-      {{ site.title }}
+  <!--<nav class="navbar navbar-expand-lg navbar-dark bg-dark">-->
+    <!--<a class="navbar-brand" href="{{ "/" | relative_url }}">-->
+      <!--<img src="{{ "/assets/imgs/terrierLogo.png" | relative_url }}" width="30" height="30">-->
+      <!--&lt;!&ndash; <i>&lt;/bh&gt;</i> &ndash;&gt;-->
+      <!--{{ site.title }}-->
+    <!--</a>-->
+
+    <!--<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">-->
+      <!--<span class="navbar-toggler-icon"></span>-->
+    <!--</button>-->
+
+    <!--<div class="collapse navbar-collapse" id="navbarSupportedContent">-->
+      <!--<ul class="navbar-nav mr-auto">-->
+        <!--<li class="nav-item {% if page.permalink == "/" %} active {% endif %}">-->
+          <!--<a class="nav-link" href="{{ "/" | relative_url }}">Home</a>-->
+        <!--</li>-->
+        <!--<li class="nav-item {% if page.permalink == "/previous/" %} active {% endif %}">-->
+          <!--<a class="nav-link" href="{{ "/previous" | relative_url }}">Previous Hackathons</a>-->
+        <!--</li>-->
+        <!--<li class="nav-item {% if page.permalink == "/about/" %} active {% endif %}">-->
+          <!--<a class="nav-link" href="{{ "/about" | relative_url }}">About / Contact</a>-->
+        <!--</li>-->
+      <!--</ul>-->
+    <!--</div>-->
+  <!--</nav>-->
+
+<!--</div>-->
+
+
+
+<div id="navContainer">
+  <button class="hamburger hamburger--slider" id="nav--burger" type="button">
+            <span class="hamburger-box">
+                <span class="hamburger-inner"></span>
+            </span>
+  </button>
+
+  <div class="navLinks">
+    <a href="#home" class="navLink">
+      <h3>Home</h3>
     </a>
+    <div class="nav-separator"></div>
 
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
+    <a href="#schedule" class="navLink">
+      <h3>Schedule</h3>
+    </a>
+    <div class="nav-separator"></div>
 
-    <div class="collapse navbar-collapse" id="navbarSupportedContent">
-      <ul class="navbar-nav mr-auto">
-        <li class="nav-item {% if page.permalink == "/" %} active {% endif %}">
-          <a class="nav-link" href="{{ "/" | relative_url }}">Home</a>
-        </li>
-        <li class="nav-item {% if page.permalink == "/previous/" %} active {% endif %}">
-          <a class="nav-link" href="{{ "/previous" | relative_url }}">Previous Hackathons</a>
-        </li>
-        <li class="nav-item {% if page.permalink == "/about/" %} active {% endif %}">
-          <a class="nav-link" href="{{ "/about" | relative_url }}">About / Contact</a>
-        </li>
-      </ul>
-    </div>
-  </nav>
+    <a href="#faqContainer" class="navLink">
+      <h3>FAQ</h3>
+    </a>
+    <div class="nav-separator"></div>
 
+    <a href="#sponsors" class="navLink">
+      <h3>Sponsors</h3>
+    </a>
+    <div class="nav-separator"></div>
+
+    <a href="#contact" class="navLink">
+      <h3>Contact us</h3>
+    </a>
+  </div>
 </div>
+<br>
