--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -5,23 +5,48 @@ layout: default
 <div class="container text-center">  
 
   {% if site.landingStatus == 'noLanding' %}
-    <div class="container">
-      <div class="row">
-        <div class="col-md-8 offset-md-2">
-          <h2> {{ site.nextHackathon.name }} </h2>
-          <div> {{ site.nextHackathon.date }} - {{ site.nextHackathon.location }} </div>
-          <br />
-          <div> Thanks for your interest! Leave your email address or follow us on social media to get notified when there's more information available!</div>
-          <form>
-            <div class="form-group">
-              <label for="inputEmail"><i>Email address</i></label>
-              <input type="email" class="form-control" id="inputEmail" placeholder="Enter email">
+  <section id="home">
+
+    <div class="homeContainer">
+
+      <img src="../assets/imgs/terrierLogo.png" id="terrierLogo">
+
+      <h1>{{site.nextHackathon.name}}</h1>
+      <h2>{{site.nextHackathon.date}}<br>{{site.nextHackathon.location}}</h2>
+      <div id="homeButtonsContainer">
+        <a href="/sponsordoc.pdf" class="button homeButtons">Sponsor</a>
+        <div id="mc_embed_signup">
+          <h3> Interested in Attending? </h3>
+          <form action="//bostonhacks.us11.list-manage.com/subscribe/post?u=13cd178ce59e4de2a1ecb4265&amp;id=1954f2ac95" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+            <div id="mc_embed_signup_scroll">
+              <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+              <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+              <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_13cd178ce59e4de2a1ecb4265_1954f2ac95" tabindex="-1" value=""></div>
+              <div class="clear"><input type="submit" value="Subscribe for Info" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
             </div>
-            <button type="submit" class="btn btn-primary">Submit</button>
           </form>
         </div>
       </div>
     </div>
+
+  </section>
+    <!--<div class="container">-->
+      <!--<div class="row">-->
+        <!--<div class="col-md-8 offset-md-2">-->
+          <!--<h2> {{ site.nextHackathon.name }} </h2>-->
+          <!--<div> {{ site.nextHackathon.date }} - {{ site.nextHackathon.location }} </div>-->
+          <!--<br />-->
+          <!--<div> Thanks for your interest! Leave your email address or follow us on social media to get notified when there's more information available!</div>-->
+          <!--<form>-->
+            <!--<div class="form-group">-->
+              <!--<label for="inputEmail"><i>Email address</i></label>-->
+              <!--<input type="email" class="form-control" id="inputEmail" placeholder="Enter email">-->
+            <!--</div>-->
+            <!--<button type="submit" class="btn btn-primary">Submit</button>-->
+          <!--</form>-->
+        <!--</div>-->
+      <!--</div>-->
+    <!--</div>-->
   {% endif %}
 
   {% if site.landingStatus == 'landing' %}
