--- a/_layouts/previous.html
+++ b/_layouts/previous.html
@@ -30,13 +30,13 @@ layout: default
 	      </div>
 	      <div class="col-sm-8 box" style="background-color: #f2f2f2; margin-left:4%;margin-bottom:30px;">
 	      	<div class="row" style="">
-	      		<div class="col-sm-4" style="margin-top: 15px;margin-bottom: 15px;">
+	      		<div class="col-sm-4" style="margin-top: 15px;margin-bottom: 7.5px;padding-right:7.5px;">
 		      		<div class="attendees" style="background-color: white;height:100%;">
 		      			<h4 style="font-size: 4rem;padding-top: 10px;text-align: center;">{{ ph.num_attendees }}</h4>
 		      			<p style="padding-bottom: 20px;font-size: 1rem;text-align:center;">Attendees</p>
 		      		</div>
 	      		</div>
-	      		<div class="col-sm-8" style="margin-top: 15px;margin-bottom: 15px;">
+	      		<div class="col-sm-8" style="margin-top: 15px;margin-bottom: 7.5px;padding-left:7.5px;">
 		      		<div style="background-color: white; height:100%;">
 		      			<div class="row" style="height:100%;">
 			      			<div class="col-sm-3" style="position: relative;">
@@ -55,7 +55,7 @@ layout: default
 			</div>
 	      	
 	      	<div class="row">
-	      		<div class="col-sm-8" style="margin-top: 15px;margin-bottom: 15px;">
+	      		<div class="col-sm-8" style="margin-top: 7.5px;margin-bottom: 7.5px;padding-right:7.5px;">
 		      		<div style="background-color: white;height:100%;">
 		      			<div class="row" style="height:100%;">
 		        			<h4 style="margin:15px 0px 15px 45px;text-align: left;">Sponsors:</h4>
@@ -64,7 +64,7 @@ layout: default
 		        	</div>
 		        </div>
 
-		        <div class="col-sm-4" style="margin-top: 15px;margin-bottom: 15px;">
+		        <div class="col-sm-4" style="margin-top: 7.5px;margin-bottom: 7.5px;padding-left:7.5px;">
 		        	<div style="background-color: white;height:100%">
 		        		<div style="background-color: white; height:100%;">
 			      			<div class="row" style="height:100%;">
@@ -77,16 +77,16 @@ layout: default
 			</div>
 	      	
 	        <div class="row">
-	      		<div class="col-sm-4" style="margin-top: 15px;margin-bottom: 15px;">
+	      		<div class="col-sm-2" style="margin-top: 7.5px;margin-bottom: 15px;padding-right:7.5px;">
 		      		<div style="background-color: white;height:100%;">
-		      			<div class="row" style="height:100%;">
-		        			<h4 style="margin:15px 0px 15px 45px;text-align: left;">Participants:</h4>
+		      			<!-- <div class="row" style="height:100%;">
+		        			<h4 style="margin:15px 0px 15px 45px;text-align: left;">Participants:</h4> -->
 		        			<img src="{{ ph.attendee_graph | relative_url }}" class="img-fluid">
-		        		</div>
+		        		<!-- </div> -->
 		        	</div>
 		        </div>
 
-		        <div class="col-sm-8" style="margin-top: 15px;margin-bottom: 15px;">
+		        <div class="col-sm-10" style="margin-top: 7.5px;margin-bottom: 15px;padding-left:7.5px;">
 		        	<div style="background-color: white;height:100%">
 		        		<div style="background-color: white; height:100%;">
 			      			<div class="row" style="height:100%;">
