--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,8 @@
 <div class="container-fluid sticky-top">
 
-  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-    <a class="navbar-brand" href="{{ "/" | relative_url }}">
-      <img src="{{ "/assets/imgs/terrierLogo.png" | relative_url }}" width="30" height="30">
+  <nav class="navbar navbar-expand-lg navbar-light" style="background-color:white; margin:15px 0 15px 0;">
+    <a class="navbar-brand" href="{{ "/" | relative_url }}" style="font-size: 2rem">
+      <img src="{{ "/assets/imgs/terrierLogo.png" | relative_url }}" width="50" height="50">
       <!-- <i>&lt;/bh&gt;</i> -->
       {{ site.title }}
     </a>
@@ -14,13 +14,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item {% if page.permalink == "/" %} active {% endif %}">
-          <a class="nav-link" href="{{ "/" | relative_url }}">Home</a>
+          <a class="nav-link" href="{{ "/" | relative_url }}" style="font-size: 1.25rem">HOME</a>
         </li>
         <li class="nav-item {% if page.permalink == "/previous/" %} active {% endif %}">
-          <a class="nav-link" href="{{ "/previous" | relative_url }}">Previous Hackathons</a>
+          <a class="nav-link" href="{{ "/previous" | relative_url }}" style="font-size: 1.25rem">HISTORY</a>
         </li>
         <li class="nav-item {% if page.permalink == "/about/" %} active {% endif %}">
-          <a class="nav-link" href="{{ "/about" | relative_url }}">About / Contact</a>
+          <a class="nav-link" href="{{ "/about" | relative_url }}" style="font-size: 1.25rem">ABOUT / CONTACT</a>
         </li>
       </ul>
     </div>
