--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,63 +2,39 @@
 layout: default
 ---
 
-<div class="container text-center">  
+<div class="container-fluid text-center"> 
+  
+  <div class="row">
+    <div class="col-md-2 offset-md-5">
+      <img class="img-fluid" src="../assets/imgs/terrierLogo.png" id="terrierLogo">
+    </div>
+  </div>
 
-  {% if site.landingStatus == 'noLanding' %}
-  <section id="home">
-
-    <div class="homeContainer">
-
-      <img src="../assets/imgs/terrierLogo.png" id="terrierLogo">
-
+  <div class="row"> 
+    <div class="col-md-6 offset-md-3">
       <h1>{{site.nextHackathon.name}}</h1>
       <h2>{{site.nextHackathon.date}}<br>{{site.nextHackathon.location}}</h2>
-      <div id="homeButtonsContainer">
-        <a href="/sponsordoc.pdf" class="button homeButtons">Sponsor</a>
-        <div id="mc_embed_signup">
-          <h3> Interested in Attending? </h3>
-          <form action="//bostonhacks.us11.list-manage.com/subscribe/post?u=13cd178ce59e4de2a1ecb4265&amp;id=1954f2ac95" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-            <div id="mc_embed_signup_scroll">
-              <input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
-              <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-              <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_13cd178ce59e4de2a1ecb4265_1954f2ac95" tabindex="-1" value=""></div>
-              <div class="clear"><input type="submit" value="Subscribe for Info" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
-            </div>
-          </form>
+
+      <hr />
+      
+      <h3> To Attend </h3>
+      <p> Thanks for the interest! Leave your email address below or follow us on social media to get notified when there's more information and registrations opens! </p>
+      <form action="//bostonhacks.us11.list-manage.com/subscribe/post?u=13cd178ce59e4de2a1ecb4265&amp;id=1954f2ac95" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+        <div id="mc_embed_signup_scroll form-group">
+          <input type="email" value="" name="EMAIL" class="email form-control" id="mce-EMAIL" placeholder="email address" required>
+          <br />
+          <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+          <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_13cd178ce59e4de2a1ecb4265_1954f2ac95" tabindex="-1" value=""></div>
+          <div class="clear"><input type="submit" value="Subscribe for Info" name="subscribe" id="mc-embedded-subscribe" class="button btn btn-primary"></div>
         </div>
-      </div>
+      </form>
+
+      <hr />
+
+      <h3> To Sponsor </h3>
+      <p> We'd love to have you on board. Click the below button to view the sponsor document, and feel free to contact us! </p>
+      <button href="{{ "/assets/sponsordoc.pdf" | relative_url }}" class="btn btn-primary">Sponsor Document</button>
+
     </div>
-
-  </section>
-    <!--<div class="container">-->
-      <!--<div class="row">-->
-        <!--<div class="col-md-8 offset-md-2">-->
-          <!--<h2> {{ site.nextHackathon.name }} </h2>-->
-          <!--<div> {{ site.nextHackathon.date }} - {{ site.nextHackathon.location }} </div>-->
-          <!--<br />-->
-          <!--<div> Thanks for your interest! Leave your email address or follow us on social media to get notified when there's more information available!</div>-->
-          <!--<form>-->
-            <!--<div class="form-group">-->
-              <!--<label for="inputEmail"><i>Email address</i></label>-->
-              <!--<input type="email" class="form-control" id="inputEmail" placeholder="Enter email">-->
-            <!--</div>-->
-            <!--<button type="submit" class="btn btn-primary">Submit</button>-->
-          <!--</form>-->
-        <!--</div>-->
-      <!--</div>-->
-    <!--</div>-->
-  {% endif %}
-
-  {% if site.landingStatus == 'landing' %}
-    <i>
-      <div> attend button </div>
-      <div> sponsor button </div>
-      <div> general landing page things </div>
-      <div> hackathon / event specific things </div>
-      <div> schedule </div>
-      <div> FAQ </div>
-      <div> sponsors, supporting partners </div>
-    </i>
-  {% endif %}
-
+  </div>
 </div>
