fixed broken image

--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,7 +6,7 @@ layout: default
   
   <div class="row">
     <div class="col-md-2 offset-md-5">
-      <img class="img-fluid" src="../assets/imgs/terrierLogo.png" id="terrierLogo">
+      <img class="img-fluid" src="{{ "/assets/imgs/terrierLogo.png" | relative_url }}" id="terrierLogo">
     </div>
   </div>
 
