added mobile layout

--- a/_layouts/previous.html
+++ b/_layouts/previous.html
@@ -12,6 +12,26 @@ layout: default
 <head>
 	<link rel="stylesheet" href="{{ '/assets/css/app.css, ' | prepend: site.baseurl }}">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+	<style type="text/css"> 
+	  .mobileShow {display: none;} 
+
+	  /* Smartphone Portrait and Landscape */ 
+	  @media only screen 
+	    and (min-device-width : 320px) 
+	    and (max-device-width : 480px){ 
+	      .mobileShow {display: inline;}
+	  }
+	</style>
+	<style type="text/css">
+	  .mobileHide { display: inline; } 
+
+	  /* Smartphone Portrait and Landscape */ 
+	  @media only screen 
+	    and (min-device-width : 320px) 
+	    and (max-device-width : 480px){ 
+	     .mobileHide { display: none;}
+	  }
+	</style>
 </head>
 
 <body>
@@ -28,78 +48,107 @@ layout: default
 	          Directed by {{ ph.director }} <br />
 	        </p>
 	      </div>
-	      <div class="col-sm-8 box" style="background-color: #f2f2f2; margin-left:4%;margin-bottom:30px;">
-	      	<div class="row" style="">
-	      		<div class="col-sm-4" style="margin-top: 15px;margin-bottom: 7.5px;padding-right:7.5px;">
-		      		<div class="attendees" style="background-color: white;height:100%;">
-		      			<h4 style="font-size: 4rem;padding-top: 10px;text-align: center;">{{ ph.num_attendees }}</h4>
-		      			<p style="padding-bottom: 20px;font-size: 1rem;text-align:center;">Attendees</p>
+	  	  </div>
+
+
+	  	  <!--mobile view-->
+	  	  <div class = "mobileShow">
+	  	  	<div class = "col" style="text-align:center;background-color:#f2f2f2;padding-top:10px;padding-bottom: 10px;">
+	  	  		<div class = "col" style="background-color: #ffffff; margin-bottom:15px;padding-top:5px;padding-bottom: 5px;">
+	  	  			<h4 style="font-size: 4rem">{{ ph.num_attendees }}</h4>
+	  	  			<p>Attendees</p>
+	  	  		</div>
+	  	  		<div class = "col" style="background-color: #ffffff; margin-bottom:15px;padding-top:5px;padding-bottom: 5px;">
+	  	  			<h4 style="font-size: 2rem">Prizes:</h4>
+	  	  			<p>{{ ph.prizes }}</p>
+	  	  		</div>
+	  	  		<div class = "col" style="background-color: #ffffff; margin-bottom:15px;padding-top:5px;padding-bottom: 5px;">
+	  	  			<h4 style="font-size: 2rem">Sponsors:</h4>
+	  	  			<p>{{ ph.sponsors }}</p>
+	  	  		</div>
+	  	  		<div class = "col" style="background-color: #ffffff; margin-bottom:15px;padding-top:5px;padding-bottom: 5px;">
+	  	  			<h4 style="margin:25px 15px 15px 30px;text-align: left;">See the projects on <a href="{{ ph.devpost }}">Devpost!</a></h4>
+	  	  		</div>
+	  	  	</div>
+	  	  </div>
+
+
+
+	  	  <!--desktop view-->
+	      <div class = "mobileHide">
+		      <div class="col-sm-8 box" style="background-color: #f2f2f2; margin-left:4%;margin-bottom:30px;">
+		      	<div class="row" style="">
+		      		<div class="col-sm-4" style="margin-top: 15px;margin-bottom: 7.5px;padding-right:7.5px;">
+			      		<div class="attendees" style="background-color: white;height:100%;">
+			      			<h4 style="font-size: 4rem;padding-top: 10px;text-align: center;">{{ ph.num_attendees }}</h4>
+			      			<p style="padding-bottom: 20px;font-size: 1rem;text-align:center;">Attendees</p>
+			      		</div>
 		      		</div>
-	      		</div>
-	      		<div class="col-sm-8" style="margin-top: 15px;margin-bottom: 7.5px;padding-left:7.5px;">
-		      		<div style="background-color: white; height:100%;">
-		      			<div class="row" style="height:100%;">
-			      			<div class="col-sm-3" style="position: relative;">
-			      				<div  style="position: absolute;top: 43%;left: 65%;height: 30%;width: 50%;margin: -15% 0 0 -25%;">
-			      					<i class="fa fa-trophy" style="font-size: 4rem"></i>
-			        				
-			        			</div>
-			        		</div>
-			        		<div class="col-sm-8" style="margin-right: 15px;text-align: left;">
-			        			<h4 style="margin: 15px 0 0 0;">Prizes:</h4> 
-			        			<p > {{ ph.prizes }} </p>
+		      		<div class="col-sm-8" style="margin-top: 15px;margin-bottom: 7.5px;padding-left:7.5px;">
+			      		<div style="background-color: white; height:100%;">
+			      			<div class="row" style="height:100%;">
+				      			<div class="col-sm-3" style="position: relative;">
+				      				<div  style="position: absolute;top: 43%;left: 65%;height: 30%;width: 50%;margin: -15% 0 0 -25%;">
+				      					<i class="fa fa-trophy" style="font-size: 4rem"></i>
+				        				
+				        			</div>
+				        		</div>
+				        		<div class="col-sm-8" style="margin-right: 15px;text-align: left;">
+				        			<h4 style="margin: 15px 0 0 0;">Prizes:</h4> 
+				        			<p > {{ ph.prizes }} </p>
+				        		</div>
+				        	</div>
+			        	</div>
+			        </div>
+				</div>
+		      	
+		      	<div class="row">
+		      		<div class="col-sm-8" style="margin-top: 7.5px;margin-bottom: 7.5px;padding-right:7.5px;">
+			      		<div style="background-color: white;height:100%;">
+			      			<div class="row" style="height:100%;">
+			        			<h4 style="margin:15px 0px 15px 45px;text-align: left;">Sponsors:</h4>
+			        			<p style="margin:0 15px 20px 45px;text-align: left;"> {{ ph.sponsors }} </p>
 			        		</div>
 			        	</div>
-		        	</div>
-		        </div>
-			</div>
-	      	
-	      	<div class="row">
-	      		<div class="col-sm-8" style="margin-top: 7.5px;margin-bottom: 7.5px;padding-right:7.5px;">
-		      		<div style="background-color: white;height:100%;">
-		      			<div class="row" style="height:100%;">
-		        			<h4 style="margin:15px 0px 15px 45px;text-align: left;">Sponsors:</h4>
-		        			<p style="margin:0 15px 20px 45px;text-align: left;"> {{ ph.sponsors }} </p>
-		        		</div>
-		        	</div>
-		        </div>
+			        </div>
 
-		        <div class="col-sm-4" style="margin-top: 7.5px;margin-bottom: 7.5px;padding-left:7.5px;">
-		        	<div style="background-color: white;height:100%">
-		        		<div style="background-color: white; height:100%;">
-			      			<div class="row" style="height:100%;">
-				        		<h4 style="margin:25px 15px 15px 30px;text-align: left;">See the projects on 
-				        		<!-- <p style="margin:0 15px 20px 45px;text-align: left;"> --><a href="{{ ph.devpost }}">Devpost!</a><!-- </p> --></h4>
-				        	</div>
-				        </div>
-				    </div>
-	        	</div>
-			</div>
-	      	
-	        <div class="row">
-	      		<div class="col-sm-2" style="margin-top: 7.5px;margin-bottom: 15px;padding-right:7.5px;">
-		      		<div style="background-color: white;height:100%;">
-		      			<!-- <div class="row" style="height:100%;">
-		        			<h4 style="margin:15px 0px 15px 45px;text-align: left;">Participants:</h4> -->
-		        			<img src="{{ ph.attendee_graph | relative_url }}" class="img-fluid">
-		        		<!-- </div> -->
+			        <div class="col-sm-4" style="margin-top: 7.5px;margin-bottom: 7.5px;padding-left:7.5px;">
+			        	<div style="background-color: white;height:100%">
+			        		<div style="background-color: white; height:100%;">
+				      			<div class="row" style="height:100%;">
+					        		<h4 style="margin:25px 15px 15px 30px;text-align: left;">See the projects on 
+					        		<!-- <p style="margin:0 15px 20px 45px;text-align: left;"> --><a href="{{ ph.devpost }}">Devpost!</a><!-- </p> --></h4>
+					        	</div>
+					        </div>
+					    </div>
 		        	</div>
-		        </div>
+				</div>
+		      	
+		        <div class="row">
+		      		<div class="col-sm-2" style="margin-top: 7.5px;margin-bottom: 15px;padding-right:7.5px;">
+			      		<div style="background-color: white;height:100%;">
+			      			<!-- <div class="row" style="height:100%;">
+			        			<h4 style="margin:15px 0px 15px 45px;text-align: left;">Participants:</h4> -->
+			        			<img src="{{ ph.attendee_graph | relative_url }}" class="img-fluid">
+			        		<!-- </div> -->
+			        	</div>
+			        </div>
 
-		        <div class="col-sm-10" style="margin-top: 7.5px;margin-bottom: 15px;padding-left:7.5px;">
-		        	<div style="background-color: white;height:100%">
-		        		<div style="background-color: white; height:100%;">
-			      			<div class="row" style="height:100%;">
-				        		<h4 style="margin:15px 0px 15px 45px;text-align: left;">Organizers:</h4>
-		        			<p style="margin:0 15px 20px 45px;text-align: left;"> {{ ph.organizers }} </p>
-				        	</div>
-				        </div>
-				    </div>
-	        	</div>
-			</div>
-	      	
-		        	
-		    </div>
+			        <div class="col-sm-10" style="margin-top: 7.5px;margin-bottom: 15px;padding-left:7.5px;">
+			        	<div style="background-color: white;height:100%">
+			        		<div style="background-color: white; height:100%;">
+				      			<div class="row" style="height:100%;">
+					        		<h4 style="margin:15px 0px 15px 45px;text-align: left;">Organizers:</h4>
+			        			<p style="margin:0 15px 20px 45px;text-align: left;"> {{ ph.organizers }} </p>
+					        	</div>
+					        </div>
+					    </div>
+		        	</div>
+				</div>
+		      	
+			        	
+			    </div>
+			 </div>
 
 	      </div>
 	    </div>
