added organizers on mobile

--- a/_layouts/previous.html
+++ b/_layouts/previous.html
@@ -145,6 +145,10 @@ layout: default
 	  	  		<div class = "col" style="background-color: #ffffff; margin-bottom:15px;padding-top:5px;padding-bottom: 5px;">
 	  	  			<h4 style="margin:25px 15px 15px 30px;text-align: left;">See the projects on <a href="{{ ph.devpost }}">Devpost!</a></h4>
 	  	  		</div>
+	  	  		<div class = "col" style="background-color: #ffffff; margin-bottom:15px;padding-top:5px;padding-bottom: 5px;">
+	  	  			<h4 style="font-size: 2rem">Organizers:</h4>
+	  	  			<p>{{ ph.organizers }}</p>
+	  	  		</div>
 	  	  	</div>
 	  	  </div>
 	    </div>
