--- a/_layouts/previous.html
+++ b/_layouts/previous.html
@@ -42,7 +42,20 @@ layout: default
 	    <div class="row">
 	      <div class="col-sm-3" style="margin-left: 30px; text-align:center;">
 	        <h2> {{ ph.name }} </h2>
-	        <img src="{{ ph.location_pic | relative_url }}" class="img-fluid">
+	        <!-- <img src="{{ ph.location_pic | relative_url }}" class="img-fluid"> -->
+	        <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+			  <div class="carousel-inner">
+			    <div class="carousel-item active">
+			      <img class="d-block w-100" src="{{ ph.location_pic | relative_url }}" alt="First slide">
+			    </div>
+			    <div class="carousel-item">
+			      <img class="d-block w-100" src="{{ ph.organizer_pic | relative_url }}" alt="Second slide">
+			    </div>
+			    <div class="carousel-item">
+			      <img class="d-block w-100" src="{{ ph.highlight_pic | relative_url }}" alt="Third slide">
+			    </div>
+			  </div>
+			</div>
 	        <p> 
 	          {{ ph.date }} <br />
 	          Directed by {{ ph.director }} <br />
