--- a/_layouts/previous.html
+++ b/_layouts/previous.html
@@ -42,17 +42,21 @@ layout: default
 	    <div class="row">
 	      <div class="col-sm-3" style="margin-left: 30px; text-align:center;">
 	        <h2> {{ ph.name }} </h2>
-	        <!-- <img src="{{ ph.location_pic | relative_url }}" class="img-fluid"> -->
-	        <div id="carouselExampleSlidesOnly" class="carousel slide" data-ride="carousel">
+	        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+			  <ol class="carousel-indicators">
+			    <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+			    <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+			    <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+			  </ol>
 			  <div class="carousel-inner">
 			    <div class="carousel-item active">
 			      <img class="d-block w-100" src="{{ ph.location_pic | relative_url }}" alt="First slide">
 			    </div>
 			    <div class="carousel-item">
-			      <img class="d-block w-100" src="{{ ph.organizer_pic | relative_url }}" alt="Second slide">
+			      <img class="d-block w-100" src="{{ ph.highlight_pic | relative_url }}" alt="Second slide">
 			    </div>
 			    <div class="carousel-item">
-			      <img class="d-block w-100" src="{{ ph.highlight_pic | relative_url }}" alt="Third slide">
+			      <img class="d-block w-100" src="{{ ph.organizer_pic | relative_url }}" alt="Third slide">
 			    </div>
 			  </div>
 			</div>
