--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,7 +9,11 @@
   <link rel="stylesheet" href="{{ "/assets/css/bootstrap.min.css" | relative_url }}">
   <link rel="stylesheet" href="{{ "/assets/css/app.css" | relative_url }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
-  
+
+  <link rel="stylesheet" href="{{ '/assets/css/app.css, ' | prepend: site.baseurl }}">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+
+
   {% if jekyll.environment == 'production' and site.google_analytics %}
   {% include google-analytics.html %}
   {% endif %}
