--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,7 @@
-<div class="container-fluid sticky-top">
+<div class="container-fluid sticky-top" style="padding:0">
 
-  <nav class="navbar navbar-expand-lg navbar-light" style="background-color:white; margin:15px 0 15px 0;">
-    <a class="navbar-brand" href="{{ "/" | relative_url }}" style="font-size: 2rem">
+  <nav class="navbar navbar-expand-lg navbar-light" style="background-color:#f1f1f1; padding:15px 0 15px 0; margin-bottom: 40px;">
+    <a class="navbar-brand" href="{{ "/" | relative_url }}" style="font-size: 2rem; margin-left: 1rem">
       <img src="{{ "/assets/imgs/terrierLogo.png" | relative_url }}" width="50" height="50">
       {{ site.title }}
     </a>
@@ -20,6 +20,17 @@
         </li>
         <li class="nav-item {% if page.permalink == "/about/" %} active {% endif %}">
           <a class="nav-link" href="{{ "/about" | relative_url }}" style="font-size: 1.25rem">ABOUT / CONTACT</a>
+        </li>
+      </ul>
+      <ul class="navbar-nav ml-auto" style="height:auto;">
+        <li class="nav-item">
+          <a href="https://www.facebook.com/bostonhacks/"><i class="fa fa-facebook-square fa-lg" style="padding:8px;"></i></a>
+        </li>
+        <li class="nav-item">
+          <a href="https://twitter.com/boston_hacks"><i class="fa fa-twitter-square fa-lg" style="padding:8px;"></i></a>
+        </li>
+        <li class="nav-item">
+          <a href="https://www.instagram.com/bostonhacks/"><i class="fa fa-instagram fa-lg" style="padding:8px;"></i></a>
         </li>
       </ul>
     </div>
