changed some landing page stuff

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,8 @@
 <div class="container-fluid sticky-top" style="padding:0">
-
+<!--  -->
   <nav class="navbar navbar-expand-lg navbar-light" style="background-color:#f1f1f1; padding:15px 0 15px 0; margin-bottom: 40px;">
     <a class="navbar-brand" href="{{ "/" | relative_url }}" style="font-size: 2rem; margin-left: 1rem">
-      <img src="{{ "/assets/imgs/terrierLogo.png" | relative_url }}" width="50" height="50">
+      <!-- <img src="{{ "/assets/imgs/terrierLogo.png" | relative_url }}" width="50" height="50"> -->
       {{ site.title }}
     </a>
 
