--- a/_layouts/about.html
+++ b/_layouts/about.html
@@ -4,15 +4,15 @@ layout: default
 
 <div class="container-fluid text-center">  
   <div class="row">
-    <div class="col-md-8 offset-md-2">
+    <div class="col-md-6 offset-md-3">
       <h1>{{page.title}}</h1>
 
       <h3>What's a Hackathon?</h3>
       <p>
-        A hackathon is an overnight event during which programmers, artists, and entrepreneurs gather to learn and make (or "hack" together) the most creative and useful projects they can. These events are usually filled with free food, swag, and prizes, and are a great opportunity to network with other hackers and sponsors.
+        A hackathon is an overnight event where programmers, artists, and entrepreneurs gather to learn and hack together creative and useful projects. They're filled with free food, swag, and prizes, and are a great opportunity to network with other hackers and sponsors.
       </p>
       <p>
-        Our sponsors include elite and important companies, and meeting their recruiters is one of the best ways to land an internship or full time offer. We have one of the biggest attendances in Boston hackathons, and it's a great environment to get an extracurricular project under your belt and make your resume stand out.
+        Our sponsors include fun, interesting, and important companies. Meeting their recruiters is one of the best ways to land an internship or full time offer. We have one of the biggest attendances in Boston hackathons, and it's a great environment to get an extracurricular project under your belt and make your resume stand out.
       </p>
       <p>
         Most importantly, the event is FREE, you get plenty of food, and it's a lot of fun! Sign up with your email or follow us on Facebook to get notified when registration opens.
