--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -3,39 +3,172 @@ layout: default
 ---
 
 <div class="container-fluid text-center"> 
-  
+
   <div class="row">
     <div class="col-md-2 offset-md-5">
-      <img class="img-fluid" src="{{ "/assets/imgs/terrierLogo.png" | relative_url }}" id="terrierLogo">
+      <img class="img-fluid" src="{{ "/assets/imgs/terrierLogoBlack.png" | relative_url }}" id="terrierLogo">
     </div>
   </div>
 
   <div class="row"> 
     <div class="col-md-6 offset-md-3">
       <h1>{{site.nextHackathon.name}}</h1>
-      <h2>{{site.nextHackathon.date}}<br>{{site.nextHackathon.location}}</h2>
+      <p>
+        {{site.nextHackathon.date}}
+        <br>
+        {{site.nextHackathon.location}}
+      </p>
 
-      <hr />
-      
-      <h3> To Attend </h3>
-      <p> Thanks for the interest! Leave your email address below or follow us on social media to get notified when there's more information and registrations opens! </p>
-      <form action="//bostonhacks.us11.list-manage.com/subscribe/post?u=13cd178ce59e4de2a1ecb4265&amp;id=1954f2ac95" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-        <div id="mc_embed_signup_scroll form-group">
-          <input type="email" value="" name="EMAIL" class="email form-control" id="mce-EMAIL" placeholder="email address" required>
-          <br />
-          <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-          <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_13cd178ce59e4de2a1ecb4265_1954f2ac95" tabindex="-1" value=""></div>
-          <div class="clear"><input type="submit" value="Subscribe for Info" name="subscribe" id="mc-embedded-subscribe" class="button btn btn-primary"></div>
-        </div>
-      </form>
-
-      <hr />
-
-      <h3> To Sponsor </h3>
-      <p> We'd love to have you on board. Click the below button to view the sponsor document, and feel free to contact us! </p>
-      <button href="{{ "/assets/sponsordoc.pdf" | relative_url }}" class="btn btn-primary">Sponsor Document</button>
       <br />
       
+      <button data-toggle="collapse" data-target="#attendSection" class="btn btn-primary btn-lg">
+        Attend
+      </button>
+
+      <div id="attendSection" class="collapse">
+        <p> Thanks for the interest! Leave your email address below or follow us on social media to get notified when there's more information and registrations opens! </p>
+        <form action="//bostonhacks.us11.list-manage.com/subscribe/post?u=13cd178ce59e4de2a1ecb4265&amp;id=1954f2ac95" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+          <div id="mc_embed_signup_scroll form-group">
+            <input type="email" value="" name="EMAIL" class="email form-control" id="mce-EMAIL" placeholder="email address" required>
+            <br />
+            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+            <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_13cd178ce59e4de2a1ecb4265_1954f2ac95" tabindex="-1" value=""></div>
+            <div class="clear"><input type="submit" value="Subscribe for Info" name="subscribe" id="mc-embedded-subscribe" class="button btn bg-light"></div>
+          </div>
+        </form>
+      </div>
+
+      <br />
+      <br />
+
+      <button data-toggle="collapse" data-target="#sponsorSection" class="btn btn-primary btn-lg">
+        Sponsor
+      </button>
+
+      <div id="sponsorSection" class="collapse">
+        <p> We'd love to have you on board. Click the below button to view the sponsor document, and feel free to contact us! </p>
+        <button href="{{ "/assets/sponsordoc.pdf" | relative_url }}" class="btn bg-light">Sponsor Document</button>
+      </div>
     </div>
   </div>
+
+  <br />
+  <br />
+
+  <div class="row">
+    <div class="col-md-6 offset-md-3">
+      <br />
+      <br />
+      <h2>Event Schedule</h2>
+    </div>
+  </div>
+
+  <div class="row text-left"> 
+    <div class="col-md-4 offset-md-2">
+      <h4>Saturday</h4>
+      <hr />
+      <p>
+        <b>9:00am</b> — Check-in &amp; Registration <br />
+        <b>11:00am</b> — Opening Ceremony <br />
+        <b>12:00pm</b> — Lunch <br />
+        <b>1:00pm</b> — Team Formation Event <br />
+        <b>1:30pm</b> — Hacking Begins  <br />
+        <b>6:30pm</b> — Dinner  <br />
+        <b>Midnight</b> — Midnight Snack <br />
+      </p>
+    </div>
+    <div class="col-md-4">
+      <h4>Sunday</h4>
+      <hr />
+      <b>7:00am</b> — Breakfast begins <br />
+      <b>11:00am</b> — Submissions due on Devpost* <br />
+      <small>*you can keep working until the expo begins</small><br />
+      <b>11:00am</b> — Lunch <br />
+      <b>12:00pm</b> — Judging Expo <br />
+      <b>2:00pm</b> — Closing Ceremony <br />
+      <b>3:00pm</b> — Go home and sleep! <br />
+      <br />
+    </div>
+  </div>
+
+  <br />
+  <br />
+
+  <div class="row">
+    <div class="col-md-6 offset-md-3">
+      <h2>Tracks and Workshops</h2>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-6 offset-md-3">
+      <p> This fall, BostonHacks will probably offer tracks: designated pathways that guide students in building a project with a specific set of technologies. Along these lines, a comprehensive set of workshops, mentors, and learning materials will be available. Prizes specific to these tracks will also be awarded.</p>
+      <p> Last year, our tracks were Web and Mobile Development, Machine Learning, and Virtual Reality and Augmented Reality. Check back soon to see what our tracks will be this year.</p>
+    </div>
+    <br />
+  </div>
+
+
+
+  <div class="row">
+    <div class="col-md-12">
+      <br />
+      <h2>Frequently Asked Questions</h2>
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-4">
+      <br />
+      <b>Where is it? </b> <br />
+      George Sherman Union, 2nd Floor in Metcalf Hall at 775 Commonwealth Avenue, Boston, MA, 02215.
+    </div>
+    <div class="col-md-4">
+      <br />
+      <b>Who's coming? </b> <br />
+      We expect 400 to 450 hackers from all over North America to attend BostonHacks.
+    </div>
+    <div class="col-md-4">
+      <br />
+      <b>Who can attend? </b> <br />
+      All students are welcome. Unfortunately, we will not be able to accommodate students under 18 this year (unless you are a BU student).
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-4">
+      <br />
+      <b>Do I need experience? </b> <br />
+      No experience necessary. We will have plenty of mentors and resources, along with several workshops targeted for beginners. Come learn and experience your first hackathon at BostonHacks!
+    </div>
+    <div class="col-md-4">
+      <br />
+      <b>Are there any rules? </b> <br />
+      We want to ensure a positive experience for all participants. We encourage you to read the Code of Conduct.
+    </div>
+    <div class="col-md-4">
+      <br />
+      <b>What should I bring? </b> <br />
+      You should bring your laptop, phone, chargers, toiletries, and optionally a sleeping bag. All food and other accommodations will be taken care of.
+    </div>
+  </div>
+
+  <div class="row">
+    <div class="col-md-4">
+      <br />
+      <b>Can we form teams?</b> <br />
+      Of course you can! We encourage people to work in teams of up to 5 people. You may opt-in to team formation during registration which will match you with an ideal team. You can work alone, but it won't be the same.
+    </div>
+    <div class="col-md-4">
+      <br />
+      <b>Does it cost anything?</b> <br/ >
+      BostonHacks is 100% free. You don't have to spend a dime!
+    </div>
+    <div class="col-md-4">
+      <br />
+      <b>Will there be travel reimbursements? </b> <br />
+      We're handling travel reimbursements on a case-by-case basis. We're also working on potentially providing busses to regions like New York and Canada.
+    </div>
+  </div>
+
 </div>
