--- a/_includes/header.html
+++ b/_includes/header.html
@@ -21,6 +21,9 @@
         <li class="nav-item {% if page.permalink == "/about/" %} active {% endif %}">
           <a class="nav-link" href="{{ "/about" | relative_url }}" style="font-size: 1.25rem">ABOUT / CONTACT</a>
         </li>
+        <li class="nav-item {% if page.permalink == "/workshops/" %} active {% endif %}">
+          <a class="nav-link" href="{{ "/workshops" | relative_url }}" style="font-size: 1.25rem">WORKSHOPS</a>
+        </li>
       </ul>
       <ul class="navbar-nav ml-auto" style="height:auto;">
         <li class="nav-item">
