small visual changes

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -13,13 +13,13 @@
     <div class="collapse navbar-collapse" id="navbarSupportedContent">
       <ul class="navbar-nav mr-auto">
         <li class="nav-item {% if page.permalink == "/" %} active {% endif %}">
-          <a class="nav-link" href="{{ "/" | relative_url }}" style="font-size: 1.25rem">HOME</a>
+          <a class="nav-link" href="{{ "/" | relative_url }}" style="font-size: 1.25rem">HOME &nbsp;</a>
         </li>
         <li class="nav-item {% if page.permalink == "/previous/" %} active {% endif %}">
-          <a class="nav-link" href="{{ "/previous" | relative_url }}" style="font-size: 1.25rem">HISTORY</a>
+          <a class="nav-link" href="{{ "/previous" | relative_url }}" style="font-size: 1.25rem">HISTORY &nbsp;</a>
         </li>
         <li class="nav-item {% if page.permalink == "/about/" %} active {% endif %}">
-          <a class="nav-link" href="{{ "/about" | relative_url }}" style="font-size: 1.25rem">ABOUT / CONTACT</a>
+          <a class="nav-link" href="{{ "/about" | relative_url }}" style="font-size: 1.25rem">ABOUT / CONTACT &nbsp;</a>
         </li>
         <li class="nav-item {% if page.permalink == "/workshops/" %} active {% endif %}">
           <a class="nav-link" href="{{ "/workshops" | relative_url }}" style="font-size: 1.25rem">WORKSHOPS</a>
