--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -102,8 +102,14 @@ layout: default
 
   <div class="row">
     <div class="col-md-6 offset-md-3">
-      <p> This fall, BostonHacks will probably offer tracks: designated pathways that guide students in building a project with a specific set of technologies. Along these lines, a comprehensive set of workshops, mentors, and learning materials will be available. Prizes specific to these tracks will also be awarded.</p>
-      <p> Last year, our tracks were Web and Mobile Development, Machine Learning, and Virtual Reality and Augmented Reality. Check back soon to see what our tracks will be this year.</p>
+      <p>
+        Tracks are optional specialized topics or technologies you can aim your project at. We'll have sponsors, workshops, and mentors to help you with your track-based project (as well as specialized prizes). Tracks are optional, make a hack you're interested in!
+      <p> 
+        Last year, our tracks were 1) Web and Mobile Development, 2) Machine Learning, and 3) Virtual Reality and Augmented Reality.
+      </p>
+      <p>
+        Check back soon to see what our tracks will be this year.
+      </p>
     </div>
     <br />
   </div>
