--- a/_layouts/workshops.html
+++ b/_layouts/workshops.html
@@ -25,9 +25,11 @@ layout: default
             BostonHacks hosts on campus workshops throughout the year. Come hang out, have fun, and learn, even when it's not the hackathon season.
           </big>
         </p>
+        <hr />
         <p>
-          <b>Next workshop: Internship Success Panel</b>. Learn about how to succeed in a summer internship on Wednesday, April 11th at 7pm in CAS 218. Facebook event: <a href="https://www.facebook.com/events/822430134623440/">https://www.facebook.com/events/822430134623440/</a>. We'll have interns from Buzzfeed, IBM, Bloomberg, Blackrock, Coinbase, Twitter, VMware, Piaggio Fast Forward, and more.
+          <b><big>Next workshop: Internship Success Panel</big></b>. Learn about how to succeed in a summer internship on <b>Wednesday, April 11th at 7pm</b> in CAS 218. Facebook event: <a href="https://www.facebook.com/events/822430134623440/">https://www.facebook.com/events/822430134623440/</a>. We'll have interns from Buzzfeed, IBM, Bloomberg, Blackrock, Coinbase, Twitter, VMware, Piaggio Fast Forward, and more.
         </p>
+        <hr />
         <p>
           You can follow us on facebook or twitter to get notified when we announce the future workshops!
         </p>
