--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,8 +10,29 @@
   <link rel="stylesheet" href="{{ "/assets/css/app.css" | relative_url }}">
   <link rel="canonical" href="{{ page.url | replace:'index.html','' | absolute_url }}">
 
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
 
+  <link rel="stylesheet" href="{{ '/assets/css/app.css, ' | prepend: site.baseurl }}">
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
+	<style type="text/css">
+	  .mobileShow {display: none;}
+
+	  /* Smartphone Portrait and Landscape */
+	  @media only screen
+	    and (min-device-width : 320px)
+	    and (max-device-width : 480px){
+	      .mobileShow {display: inline;}
+	  }
+	</style>
+	<style type="text/css">
+	  .mobileHide { display: inline; }
+
+	  /* Smartphone Portrait and Landscape */
+	  @media only screen
+	    and (min-device-width : 320px)
+	    and (max-device-width : 480px){
+	     .mobileHide { display: none;}
+	  }
+	</style>
 
   {% if jekyll.environment == 'production' and site.google_analytics %}
   {% include google-analytics.html %}
