--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -2,41 +2,44 @@
 layout: default
 ---
 
-<div class="container-fluid text-center"> 
+<div class="container-fluid text-center">
 
-  <div class="row">
-    <div class="col-md-2 offset-md-5">
-      <img class="img-fluid" src="{{ "/assets/imgs/terrierLogoBlack.png" | relative_url }}" id="terrierLogo">
-    </div>
+  <div class="row" id="landing-page">
+    <div class="col-md-4"></div>
+    <div class="col-md-4" style="padding-top:30px; padding-bottom:30; color:White">
+        <img class="img-fluid" style="width:50%; " src="{{ "/assets/imgs/terrierLogoWhite.png" | relative_url }}" id="terrierLogo">
+        <h1>{{site.nextHackathon.name}}</h1>
+        <p>
+          {{site.nextHackathon.date}}
+          <br>
+          {{site.nextHackathon.location}}
+        </p>
+      </div>
+    <div class="col-md-4" ></div>
   </div>
 
-  <div class="row"> 
-    <div class="col-md-6 offset-md-3">
-      <h1>{{site.nextHackathon.name}}</h1>
-      <p>
-        {{site.nextHackathon.date}}
-        <br>
-        {{site.nextHackathon.location}}
-      </p>
+  <br />
+  <br />
+  <div class="row">
+    <div class="col-md-3">
 
       <br />
-      
-      <button data-toggle="collapse" data-target="#attendSection" class="btn btn-primary btn-lg">
-        Attend
-      </button>
 
-      <div id="attendSection" class="collapse">
-        <p> Thanks for the interest! Leave your email address below or follow us on social media to get notified when there's more information and registrations opens! </p>
-        <form action="//bostonhacks.us11.list-manage.com/subscribe/post?u=13cd178ce59e4de2a1ecb4265&amp;id=1954f2ac95" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
-          <div id="mc_embed_signup_scroll form-group">
-            <input type="email" value="" name="EMAIL" class="email form-control" id="mce-EMAIL" placeholder="email address" required>
-            <br />
-            <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
-            <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_13cd178ce59e4de2a1ecb4265_1954f2ac95" tabindex="-1" value=""></div>
-            <div class="clear"><input type="submit" value="Subscribe for Info" name="subscribe" id="mc-embedded-subscribe" class="button btn bg-light"></div>
-          </div>
-        </form>
-      </div>
+      <h1>
+        Attend
+      </h1>
+      <br/>
+      <p> Thanks for the interest! Leave your email address below or follow us on social media to get notified when there's more information and registrations opens! </p>
+      <form action="//bostonhacks.us11.list-manage.com/subscribe/post?u=13cd178ce59e4de2a1ecb4265&amp;id=1954f2ac95" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+        <div id="mc_embed_signup_scroll form-group">
+          <input type="email" value="" name="EMAIL" class="email form-control" id="mce-EMAIL" placeholder="email address" required>
+          <br />
+          <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+          <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_13cd178ce59e4de2a1ecb4265_1954f2ac95" tabindex="-1" value=""></div>
+          <div class="clear"><input type="submit" value="Subscribe for Info" name="subscribe" id="mc-embedded-subscribe" class="button btn bg-light"></div>
+        </div>
+      </form>
+
 
       <br />
       <br />
@@ -52,9 +55,6 @@ layout: default
     </div>
   </div>
 
-  <br />
-  <br />
-
   <div class="row">
     <div class="col-md-6 offset-md-3">
       <br />
@@ -63,7 +63,7 @@ layout: default
     </div>
   </div>
 
-  <div class="row text-left"> 
+  <div class="row text-left">
     <div class="col-md-4 offset-md-2">
       <h4>Saturday</h4>
       <hr />
@@ -104,7 +104,7 @@ layout: default
     <div class="col-md-6 offset-md-3">
       <p>
         Tracks are optional specialized topics or technologies you can aim your project at. We'll have sponsors, workshops, and mentors to help you with your track-based project (as well as specialized prizes). Tracks are optional, make a hack you're interested in!
-      <p> 
+      <p>
         Last year, our tracks were 1) Web and Mobile Development, 2) Machine Learning, and 3) Virtual Reality and Augmented Reality.
       </p>
       <p>
@@ -178,7 +178,7 @@ layout: default
           We're handling travel reimbursements on a case-by-case basis. We're also working on potentially providing busses to regions like New York and Canada.
         </div>
       </div>
-      
+
     </div>
   </div>
 
