Most of the landing page is ready

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -3,11 +3,12 @@ body {
 }
 
 #landing-page{
-  /* height: 100%; */
+
   background-image: url('/assets/imgs/background_img.png');
   background-size: cover;
   background-position: center;
   background-repeat: no-repeat;
+  background-color: #bfb6b6;
 }
 
 .footer {
