--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -6,7 +6,9 @@ layout: default
 
   <div class="row" id="landing-page">
     <div class="col-md-4"></div>
-    <div class="col-md-4" style="padding-top:30px; padding-bottom:30; color:White">
+    <div class="col-md-4" style="color:White">
+      <br/>
+      <br/>
         <img class="img-fluid" style="width:50%; " src="{{ "/assets/imgs/terrierLogoWhite.png" | relative_url }}" id="terrierLogo">
         <h1>{{site.nextHackathon.name}}</h1>
         <p>
@@ -14,48 +16,49 @@ layout: default
           <br>
           {{site.nextHackathon.location}}
         </p>
+        <br/>
+        <br/>
       </div>
     <div class="col-md-4" ></div>
   </div>
 
-  <br />
-  <br />
-  <div class="row">
-    <div class="col-md-3">
 
-      <br />
+  <div class="row" style="padding-top:60px; padding-bottom:40px">
+    <br />
+    <br />
 
-      <h1>
-        Attend
-      </h1>
+    <div class="col-md-1"> </div>
+    <div class="col-md">
+      <h1 style="font-size:50px; color: #353535;"><i class="fa fa-code fa-md"></i> Attend </h1>
+
       <br/>
       <p> Thanks for the interest! Leave your email address below or follow us on social media to get notified when there's more information and registrations opens! </p>
+      <br/>
       <form action="//bostonhacks.us11.list-manage.com/subscribe/post?u=13cd178ce59e4de2a1ecb4265&amp;id=1954f2ac95" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
         <div id="mc_embed_signup_scroll form-group">
           <input type="email" value="" name="EMAIL" class="email form-control" id="mce-EMAIL" placeholder="email address" required>
           <br />
           <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
           <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_13cd178ce59e4de2a1ecb4265_1954f2ac95" tabindex="-1" value=""></div>
-          <div class="clear"><input type="submit" value="Subscribe for Info" name="subscribe" id="mc-embedded-subscribe" class="button btn bg-light"></div>
+          <div class="clear"><input type="submit" value="Subscribe for Info" name="subscribe" id="mc-embedded-subscribe" class="button btn btn-outline-danger"></div>
         </div>
       </form>
-
-
-      <br />
-      <br />
-
-      <button data-toggle="collapse" data-target="#sponsorSection" class="btn btn-primary btn-lg">
-        Sponsor
-      </button>
-
-      <div id="sponsorSection" class="collapse">
-        <p> We'd love to have you on board. Click the below button to view the sponsor document, and feel free to contact us! </p>
-        <button href="{{ "/assets/sponsordoc.pdf" | relative_url }}" class="btn bg-light">Sponsor Document</button>
-      </div>
+      <br/>
+      <br/>
     </div>
+    <div class="col-md-1"></div>
+    <div class="col-md">
+
+      <h1 style="font-size:50px; color: #353535;"><i class="fa fa-coffee fa-md"></i> Sponsor </h1>
+      <br/>
+      <p> We'd love to have you on board. Click the below button to view the sponsor document, and feel free to contact us! </p>
+      <br/>
+      <button href="{{ "/assets/sponsordoc.pdf" | relative_url }}" class="btn btn-outline-danger">Sponsor Document</button>
+    </div>
+    <div class="col-md-1"></div>
   </div>
 
-  <div class="row">
+  <div class="row" style="background-color:#f2f2f2;">
     <div class="col-md-6 offset-md-3">
       <br />
       <br />
@@ -63,7 +66,7 @@ layout: default
     </div>
   </div>
 
-  <div class="row text-left">
+  <div class="row text-left" style="background-color:#f2f2f2;">
     <div class="col-md-4 offset-md-2">
       <h4>Saturday</h4>
       <hr />
@@ -97,32 +100,56 @@ layout: default
   <div class="row">
     <div class="col-md-6 offset-md-3">
       <h2>Tracks and Workshops</h2>
+      <br/>
+      <p>
+          Tracks are optional specialized topics or technologies you can aim your project at. We'll have sponsors, workshops, and mentors to help you with your track-based project (as well as specialized prizes). Tracks are optional, make a hack you're interested in!
+      <br/>
+      <p>
+          Check back soon to see what our tracks will be this year!
+      </p>
     </div>
   </div>
 
+  <br/>
+  <br/>
+
+
   <div class="row">
-    <div class="col-md-6 offset-md-3">
-      <p>
-        Tracks are optional specialized topics or technologies you can aim your project at. We'll have sponsors, workshops, and mentors to help you with your track-based project (as well as specialized prizes). Tracks are optional, make a hack you're interested in!
-      <p>
-        Last year, our tracks were 1) Web and Mobile Development, 2) Machine Learning, and 3) Virtual Reality and Augmented Reality.
-      </p>
-      <p>
-        Check back soon to see what our tracks will be this year.
+    <div class="col-md-4" style="border-left:1px solid #e6e6e6;">
+      <p style="font-size:80px"><i class="fa fa-laptop fa-lg"></i><p/>
+      <h3> Web and Mobile</h3>
+      <br/>
+      <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc et metus cursus mi feugiat
+
+    </div>
+    <div class="col-md-4" style="border-left:1px solid #e6e6e6;">
+      <img src="/assets/imgs/vr_icon.png" style="height:80px">
+      <h3> Machine Learning </h3>
+      <br/>
+      <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc et metus cursus mi feugiat
+
+    </div>
+    <div class="col-md-4" style="border-left:1px solid #e6e6e6;">
+      <img src="/assets/imgs/vr_icon.png" style="height:80px">
+      <h3> Virtual Reality </h3>
+      <br/>
+      <p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc et metus cursus mi feugiat
       </p>
     </div>
-    <br />
   </div>
 
+  <br/>
+  <br/>
 
 
-  <div class="row">
+
+  <div class="row" style="background-color:#f2f2f2;">
     <div class="col-md-12">
       <br />
       <h2>Frequently Asked Questions</h2>
     </div>
   </div>
-  <div class="row">
+  <div class="row" style="background-color:#f2f2f2;">
     <div class="col-md-10 offset-md-1">
 
       <div class="row">
