Workshop page design done

--- a/_layouts/workshops.html
+++ b/_layouts/workshops.html
@@ -9,44 +9,99 @@ layout: default
 <html class="no-js" lang="en">
 <!--<![endif]-->
 
-<head>
-	<link rel="stylesheet" href="{{ '/assets/css/app.css, ' | prepend: site.baseurl }}">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css">
-</head>
-
 <body>
 	<div class="container-fluid text-center">
-	  <h2> {{ page.title }} </h2>
-	  <br />
-	  <div class="row">
-      <div class="offset-md-3 col-6">
-        <p>
-          <big>
-            BostonHacks hosts on campus workshops throughout the year. Come hang out, have fun, and learn, even when it's not the hackathon season.
-          </big>
-        </p>
-        <hr />
-        <p>
-          <b><big>Next workshop: Internship Success Panel</big></b>. Learn about how to succeed in a summer internship on <b>Wednesday, April 11th at 7pm</b> in CAS 218. Facebook event: <a href="https://www.facebook.com/events/822430134623440/">https://www.facebook.com/events/822430134623440/</a>. We'll have interns from Buzzfeed, IBM, Bloomberg, Blackrock, Coinbase, Twitter, VMware, Piaggio Fast Forward, and more.
-        </p>
-        <hr />
-        <p>
-          You can follow us on facebook or twitter to get notified when we announce the future workshops!
-        </p>
-        <p>
-          Previous Workshops:
-          <ul class="list-group">
-            <li class="list-group-item">
-              Demistifying the cloud: all about cloud infrastructure
-            </li>
-            <li class="list-group-item">
-              How to succeed in a summer internship
-            </li>
-            <li class="list-group-item">
-              Local hack day (mini hackathon)
-            </li>
-          </ul>
-        </p>
-      </div>
-    </div>
+
+		<div class="row">
+			<div class="col-md-4"></div>
+			<div class="col-md">
+				<br/>
+				<br/>
+				<h1> {{ page.title }} </h1>
+				<br/>
+				<p>BostonHacks hosts on campus workshops throughout the year. Come hang out, have fun, and learn, even when it's not the hackathon season.
+
+					You can follow us on facebook or twitter for updates!
+				</p>
+			</div>
+		<div class="col-md-4"></div>
+	</div>
+	<br/>
+	<br/>
+
+		<!-- <div class="row" >
+			<div class="col-md-2"></div>
+			<div class="col-md" style="text-align:left">
+				<br/>
+				<h2>Previous Workshops</h2>
+
+			</div>
+		</div> -->
+
+		<div class="row" style="text-align: left">
+
+			<div class="col-md-1"></div>
+			<div class="col-md" style="border:2px solid #f2f2f2; margin: 30px 0 30px 30px;">
+				<br/>
+				<p style="font-size:100px; text-align:center; color:#d33f4e;">
+					<i class="fa fa-briefcase fa-lg"></i>
+				</p>
+				<h4> Internship Success Panel </h4>
+				<br/>
+
+				<p> Learn about how to succeed in a summer internship from experienced students that interned on companies including Buzzfeed, IBM, Bloomberg.
+				</p>
+				<p> Date: 01/01/01 </p>
+
+				<p style="text-align:center;">
+					<a href="https://placehold.com454"><button class="btn btn-outline-danger">Github Repository</button></a>
+				</p>
+				<br/>
+			</div>
+			<div class="col-md" style="border:2px solid #f2f2f2; margin: 30px 0 30px 30px;">
+				<br/>
+				<p style="font-size:100px; text-align:center; color:#d33f4e;">
+					<i class="fa fa-cloud fa-lg"></i>
+				</p>
+
+				<h4> Demystifying the cloud: all about cloud infrastructure</h4>
+				<br/>
+				<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc et metus cursus mi feugiat
+				</p>
+				<p> Date: 01/01/01 </p>
+				<p style="text-align:center;">
+					<a href="https://placehold.com454"><button class="btn btn-outline-danger">Github Repository</button></a>
+				</p>
+				<br/>
+			</div>
+			<!-- <div class="col-md" style="border:2px solid #f2f2f2; margin: 30px 0 30px 30px;">
+				<br/>
+				<h4> How to succeed in a summer internship </h4>
+				<br/>
+				<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc et metus cursus mi feugiat
+				</p>
+				<p> Date: 01/01/01 </p><p style="text-align:center;">
+					<a href="https://placehold.com454"><button class="btn btn-outline-danger">Github Repository</button></a>
+				</p>
+				<br/>
+			</div> -->
+			<div class="col-md" style="border:2px solid #f2f2f2; margin: 30px 0 30px 30px;">
+				<br/>
+				<p style="font-size:100px; text-align:center; color:#d33f4e;">
+					<i class="fa fa-laptop fa-lg"></i>
+				</p>
+				<h4> Local hack day (mini hackathon)</h4>
+				<br/>
+				<p> Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc et metus cursus mi feugiat
+				</p>
+				<p> Date: 01/01/01 </p>
+				<p style="text-align:center;">
+					<a href="https://placehold.com454"><button class="btn btn-outline-danger">Github Repository</button></a>
+				</p>
+				<br/>
+			</div>
+
+			<div class="col-md-1"></div>
+		</div>
+
 </body>
