--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,9 +1,9 @@
 <div class="container-fluid sticky-top" style="padding:0">
 <!--  -->
   <nav class="navbar navbar-expand-lg navbar-light" style="background-color: white; padding:15px 0 15px 0; border-bottom: 1px solid #f2f2f2;">
-    <a class="navbar-brand" href="{{ "/" | relative_url }}" style="font-size: 2rem; margin-left: 1rem">
+    <a class="navbar-brand" href="{{ "/" | relative_url }}" style="font-size: 2rem; margin-left: 2rem">
       <!-- <img src="{{ "/assets/imgs/terrierLogo.png" | relative_url }}" width="50" height="50"> -->
-      {{ site.title }}
+      Boston<b>Hacks</b>
     </a>
 
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
