--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -49,7 +49,7 @@ layout: default
     <div class="col-md-1"></div>
     <div class="col-md">
 
-      <h1 style="font-size:50px; color: #353535;"><i class="fa fa-coffee fa-md"></i> Sponsor </h1>
+      <h1 style="font-size:50px; color: #353535;"><i class="fa fa-briefcase fa-md"></i> Sponsor </h1>
       <br/>
       <p> We'd love to have you on board. Click the below button to view the sponsor document, and feel free to contact us! </p>
       <br/>
@@ -66,8 +66,8 @@ layout: default
     </div>
   </div>
 
-  <div class="row text-left" style="background-color:#f2f2f2;">
-    <div class="col-md-4 offset-md-2">
+  <div class="row" style="background-color:#f2f2f2;">
+    <!-- <div class="col-md-4 offset-md-2">
       <h4>Saturday</h4>
       <hr />
       <p>
@@ -90,6 +90,10 @@ layout: default
       <b>12:00pm</b> — Judging Expo <br />
       <b>2:00pm</b> — Closing Ceremony <br />
       <b>3:00pm</b> — Go home and sleep! <br />
+      <br />
+    </div> -->
+    <div class="col-md" style="margin-bottom: 40px">
+      <img src="/assets/imgs/schedule.png" style="height:500px">
       <br />
     </div>
   </div>
